results/hpc_20250402/NGB_log Rg (nm)_Mordred_Trimer_KM4 Mordred_Polysize cluster_20250402.err
Traceback (most recent call last):
  File "/gpfs_common/share03/ddomlab/sdehgha2/working-space/main/P1_pls-dataset/pls-dataset-space/PLS-Dataset/code_/training/hpc_submit_training_Rh/../make_ood_learning_curve.py", line 3, in <module>
    from get_ood_split_learning_curve import train_ood_learning_curve
  File "/gpfs_common/share03/ddomlab/sdehgha2/working-space/main/P1_pls-dataset/pls-dataset-space/PLS-Dataset/code_/training/get_ood_split_learning_curve.py", line 1
    %load_ext cuml.accel
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/gpfs_common/share03/ddomlab/sdehgha2/working-space/main/P1_pls-dataset/pls-dataset-space/PLS-Dataset/code_/training/hpc_submit_training_Rh/../make_ood_learning_curve.py", line 102, in <module>
    main_structural_numerical(
  File "/gpfs_common/share03/ddomlab/sdehgha2/working-space/main/P1_pls-dataset/pls-dataset-space/PLS-Dataset/code_/training/hpc_submit_training_Rh/../make_ood_learning_curve.py", line 47, in main_structural_numerical
    scores, predictions  = train_ood_learning_curve(
  File "/gpfs_common/share03/ddomlab/sdehgha2/working-space/main/P1_pls-dataset/pls-dataset-space/PLS-Dataset/code_/training/get_ood_split_learning_curve.py", line 71, in train_ood_learning_curve
    score = process_ood_learning_curve_score(score)
  File "/gpfs_common/share03/ddomlab/sdehgha2/working-space/main/P1_pls-dataset/pls-dataset-space/PLS-Dataset/code_/training/scoring.py", line 313, in process_ood_learning_curve_score
    for seed, (test_results, train_results) in seeds.items():
AttributeError: 'int' object has no attribute 'items'
